--- a/app/src/main/res/layout/activity_agent_sign_up.xml
+++ b/app/src/main/res/layout/activity_agent_sign_up.xml
@@ -142,7 +142,7 @@
                     android:layout_marginBottom="5dp"
                     android:background="@drawable/stroke_background"
                     android:paddingStart="10dp"
-                    android:inputType="textPassword"
+                    android:inputType="text"
                     android:imeOptions="actionNext"
                     android:drawableEnd="@drawable/ic_lock_black_24dp"
                     android:paddingEnd="10dp"
