--- a/app/src/main/res/layout/activity_provider_sign_up.xml
+++ b/app/src/main/res/layout/activity_provider_sign_up.xml
@@ -123,7 +123,7 @@
                     android:background="@drawable/stroke_background"
                     android:drawableEnd="@drawable/ic_location_on_black_24dp"
                     android:fontFamily="sans-serif-light"
-                    android:hint="enter Location"
+                    android:hint="Enter Location"
                     android:imeOptions="actionNext"
                     android:inputType="text|textMultiLine"
                     android:maxLines="2"
@@ -145,7 +145,7 @@
                     android:layout_marginBottom="5dp"
                     android:background="@drawable/stroke_background"
                     android:gravity="center_vertical"
-                    android:hint="Enter your service"
+                    android:hint="Enter your Advertisement"
                     android:imeOptions="actionNext"
                     android:inputType="text"
                     android:paddingStart="10dp"
@@ -156,23 +156,23 @@
 
                 <EditText
                     android:id="@+id/provider_service_descp"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/provider_services_type"
                     android:layout_centerHorizontal="true"
                     android:layout_marginStart="50dp"
                     android:layout_marginTop="15sp"
                     android:layout_marginBottom="5dp"
                     android:background="@drawable/stroke_background"
-                    android:gravity="bottom"
                     android:hint="Advertisement Details"
                     android:imeOptions="actionNext"
-                    android:inputType="text"
+                    android:inputType="text|textMultiLine"
                     android:paddingStart="10dp"
-                    android:paddingTop="5dp"
+                    android:paddingTop="15dp"
                     android:paddingEnd="10dp"
-                    android:paddingBottom="10dp"
+                    android:paddingBottom="15dp"
                     android:textSize="15sp"
+                    android:maxLength="500"
                     android:visibility="visible" />
 
                 <LinearLayout
