--- a/app/src/main/res/layout/advertisement_layout.xml
+++ b/app/src/main/res/layout/advertisement_layout.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="2dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginBottom="2dp"
+    app:cardBackgroundColor="@color/white">
 
     <TextView
         android:id="@+id/advtText"
@@ -14,6 +21,7 @@
         android:layout_margin="4dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        android:textStyle="italic"/>
 
-</RelativeLayout>
+</android.support.v7.widget.CardView>
